--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "7.0.0-dev.20241114",
+  "version": "7.0.0-dev.20241115",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -39,8 +39,9 @@
     "transform",
     "ajv",
     "io-ts",
+    "zod",
     "schema",
-    "jsonschema",
+    "json-schema",
     "generator",
     "assert",
     "clone",
@@ -55,7 +56,14 @@
     "safe",
     "parse",
     "prune",
-    "random"
+    "random",
+    "protobuf",
+    "llm",
+    "llm-function-calling",
+    "openai",
+    "chatgpt",
+    "llama",
+    "gemini"
   ],
   "author": "Jeongho Nam",
   "license": "MIT",
@@ -64,7 +72,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "7.0.0-dev.20241114"
+    "typia": "7.0.0-dev.20241115"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.7.0"
