--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "6.12.0",
+  "version": "6.12.1",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -75,7 +75,8 @@
     "randexp": "^0.5.3"
   },
   "peerDependencies": {
-    "typescript": ">=4.8.0 <5.7.0"
+    "typescript": ">=4.8.0 <5.7.0",
+    "@samchon/openapi": ">=1.2.2 <2.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
