--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "rollup": "^4.18.0",
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "~5.6.3"
   },
   "stackblitz": {
     "startCommand": "npm install && npm run test"
