--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "7.0.0-dev.20241126-2",
+  "version": "7.0.0-dev.20241127",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -37,11 +37,10 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "7.0.0-dev.20241126-2"
+    "typia": "7.0.0-dev.20241127"
   },
   "peerDependencies": {
-    "typescript": ">=4.8.0 <5.7.0",
-    "@samchon/openapi": ">=1.2.4 <2.0.0"
+    "typescript": ">=4.8.0 <5.7.0"
   },
   "stackblitz": {
     "startCommand": "npm install && npm run test"
