--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@matatbread/typia",
-  "version": "7.0.1",
+  "version": "7.0.1-nrc",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -116,6 +116,5 @@
     "claude",
     "gemini",
     "llama"
-  ],
-  "private": true
+  ]
 }
