Update release.yml to deploy website

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-      contents: none
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
