Fix LLM schema recursive type detector.

--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "7.4.0-dev.20241215",
+  "version": "7.4.1-dev.20241216-2",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -37,11 +37,11 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "7.4.0-dev.20241215"
+    "typia": "7.4.1-dev.20241216-2"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.8.0",
-    "@samchon/openapi": ">=2.2.0 <3.0.0"
+    "@samchon/openapi": ">=2.2.1 <3.0.0"
   },
   "stackblitz": {
     "startCommand": "npm install && npm run test"
