--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "7.4.1-dev.20241216-2",
+  "version": "7.4.2-dev.20241217",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -37,7 +37,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "7.4.1-dev.20241216-2"
+    "typia": "7.4.2-dev.20241217"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.8.0",
