--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "7.5.1",
+  "version": "7.6.0-dev.20241229",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -41,7 +41,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "@samchon/openapi": "^2.3.1",
+    "@samchon/openapi": "^2.4.0-dev.20241229",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "inquirer": "^8.2.5",
@@ -49,8 +49,7 @@
     "randexp": "^0.5.3"
   },
   "peerDependencies": {
-    "typescript": ">=4.8.0 <5.8.0",
-    "@samchon/openapi": ">=2.3.0 <3.0.0"
+    "typescript": ">=4.8.0 <5.8.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
