--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "7.5.0-dev.20241218",
+  "version": "7.6.0-dev.20241229",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -37,11 +37,10 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "7.5.0-dev.20241218"
+    "typia": "7.6.0-dev.20241229"
   },
   "peerDependencies": {
-    "typescript": ">=4.8.0 <5.8.0",
-    "@samchon/openapi": ">=2.3.0-dev.20241218 <3.0.0"
+    "typescript": ">=4.8.0 <5.8.0"
   },
   "stackblitz": {
     "startCommand": "npm install && npm run test"
