feat(ci): include tsconfig and rollup in workflow triggers
Added 'tsconfig.json' and 'rollup.config.js' to the list of files that
trigger the CI workflow. This ensures that changes to these files will
initiate the build process.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
       - 'test-error/**'
       - 'test-esm/**'
       - 'package.json'
+      - 'tsconfig.json'
+      - 'rollup.config.js'
       - '.github/workflows/build.yml'
 jobs:
   Build-and-Upload-to-pkg-pr-new-and-artifactory:
