--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build": "rimraf lib && tsc && rollup -c",
     "dev": "rimraf lib && tsc --watch",
     "dev:errors": "tsc --project tsconfig.errors.json --watch",
-    "eslint": "eslint ./**/*.ts",
-    "eslint:fix": "eslint ./**/*.ts --fix",
+    "eslint": "eslint",
+    "eslint:fix": "eslint --fix",
     "prettier": "prettier src --write",
     "------------------------------------------------": "",
     "package:latest": "ts-node deploy --tag latest",
@@ -41,7 +41,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "@samchon/openapi": "^2.4.0",
+    "@samchon/openapi": ">=2.4.0 <3.0.0",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "inquirer": "^8.2.5",
@@ -49,8 +49,8 @@
     "randexp": "^0.5.3"
   },
   "peerDependencies": {
-    "typescript": ">=4.8.0 <5.8.0",
-    "@samchon/openapi": ">=2.4.0 <3.0.0"
+    "@samchon/openapi": ">=2.4.0 <3.0.0",
+    "typescript": ">=4.8.0 <5.8.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
@@ -60,9 +60,10 @@
     "@types/inquirer": "^8.2.5",
     "@types/node": "^18.15.12",
     "@types/ts-expose-internals": "npm:ts-expose-internals@5.5.4",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "chalk": "^4.0.0",
+    "eslint-plugin-deprecation": "^3.0.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "rollup": "^4.18.0",
