--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "typia",
   "version": "7.6.4",
+  "type": "module",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
