--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
       - 'test-esm/**'
       - 'package.json'
       - 'tsconfig.json'
-      - 'rollup.config.js'
+      - 'tsconfig.cjs.json'
       - '.github/workflows/build.yml'
 jobs:
   Build-and-Upload-to-pkg-pr-new-and-artifactory:
