--- a/website/package.json
+++ b/website/package.json
@@ -38,7 +38,7 @@
     "react-dom": "^18.2.0",
     "tgrid": "^1.0.3",
     "tstl": "^3.0.0",
-    "typescript": "~5.7.3",
+    "typescript": "~5.8.0-beta",
     "typia": "latest"
   },
   "devDependencies": {
