--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dev:errors": "tsc --project tsconfig.errors.json --watch",
     "eslint": "eslint",
     "eslint:fix": "eslint --fix",
-    "prettier": "prettier src --write",
+    "prettier": "prettier src --check",
+    "prettier:fix": "prettier src --write",
     "------------------------------------------------": "",
     "package:latest": "ts-node deploy --tag latest",
     "package:next": "ts-node deploy --tag next",
@@ -120,3 +121,4 @@
   ],
   "private": true
 }
+
