--- a/typos.toml
+++ b/typos.toml
@@ -1,5 +1,9 @@
 [default]
 locale = 'en-us'
+extend-ignore-re = [
+  "(?Rm)^.*(<!--|#|//)\\s*spellchecker:disable-line(-->|\n)?$",
+  "(?s)(<!--|#|//)\\s*spellchecker:off\\s*(-->|\n).*?(<!--|#|//)\\s*spellchecker:on",
+]
 
 [default.extend-words]
 Jeongho = "Jeongho"
