--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "typescript": ">=4.8.0 <5.8.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.19.0",
     "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
@@ -63,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "chalk": "^4.0.0",
+    "eslint": "^9.19.0",
     "eslint-plugin-deprecation": "^3.0.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
