feat(eslint): only src

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "build": "rimraf lib && tsc && rollup -c",
     "dev": "rimraf lib && tsc --watch",
     "dev:errors": "tsc --project tsconfig.errors.json --watch",
-    "eslint": "eslint",
-    "eslint:fix": "eslint --fix",
+    "eslint": "eslint --cache src",
+    "eslint:fix": "eslint --cache --fix src",
     "prettier": "prettier src --write",
     "------------------------------------------------": "",
     "package:latest": "ts-node deploy --tag latest",
