chore: move check-format script (ci.yml -> build.yml)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,17 @@ jobs:
             src
             lib
 
+  Check-format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - run: npm install
+      - run: npm run eslint
+      - run: npm run prettier
+
   NodeJS:
     runs-on: ubuntu-latest
     strategy:
@@ -87,6 +98,7 @@ jobs:
   action-timeline:
     needs:
       - Build-and-Upload-to-pkg-pr-new-and-artifactory
+      - Check-format
       - NodeJS
       - Bun
     if: ${{ always() }}
