--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "7.5.0-dev.20241218",
+  "version": "7.6.1-dev.20250203",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -17,9 +17,10 @@
     "build": "rimraf lib && tsc && rollup -c",
     "dev": "rimraf lib && tsc --watch",
     "dev:errors": "tsc --project tsconfig.errors.json --watch",
-    "eslint": "eslint ./**/*.ts",
-    "eslint:fix": "eslint ./**/*.ts --fix",
-    "prettier": "prettier src --write",
+    "eslint": "eslint",
+    "eslint:fix": "eslint --fix",
+    "prettier": "prettier src --check",
+    "prettier:fix": "prettier src --write",
     "------------------------------------------------": "",
     "package:latest": "ts-node deploy --tag latest",
     "package:next": "ts-node deploy --tag next",
@@ -37,11 +38,11 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "7.5.0-dev.20241218"
+    "typia": "7.6.1-dev.20250203"
   },
   "peerDependencies": {
-    "typescript": ">=4.8.0 <5.8.0",
-    "@samchon/openapi": ">=2.3.0-dev.20241218 <3.0.0"
+    "@samchon/openapi": ">=2.4.2 <3.0.0",
+    "typescript": ">=4.8.0 <5.8.0"
   },
   "stackblitz": {
     "startCommand": "npm install && npm run test"
