--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@typescript-eslint/parser": "^8.1.0",
     "chalk": "^4.0.0",
     "eslint": "^9.19.0",
+    "eslint-config-flat-gitignore": "^2.0.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "rollup": "^4.18.0",
