--- a/package.json
+++ b/package.json
@@ -62,8 +62,6 @@
     "@types/inquirer": "^8.2.5",
     "@types/node": "^18.15.12",
     "@types/ts-expose-internals": "npm:ts-expose-internals@5.5.4",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
     "chalk": "^4.0.0",
     "eslint": "^9.19.0",
     "eslint-config-flat-gitignore": "^2.0.0",
@@ -72,7 +70,8 @@
     "rollup": "^4.18.0",
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.9.2",
-    "typescript": "~5.7.3"
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.23.0"
   },
   "stackblitz": {
     "startCommand": "npm install && npm run test"
