Fix website publisher

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,10 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
       - name: Website Setup
         working-directory: website
-        run: npm install && npm run build
+        run: |
+          npm cache clean --force
+          npm install
+          npm run build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
