--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -15,10 +15,12 @@ jobs:
         with:
           node-version: 20.x
       - name: Root
-        run: npm install && npm run build
+        run: npm install
       - name: Build
         working-directory: website
-        run: npm install && npm run build
+        run: |
+          npm install
+          npm run build
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
