--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,7 +99,10 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
+    "plugins": [
+      { "transform": "typescript-transform-paths" },
+    ]
   },
   "include": ["src"]
 }
