--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "homepage": "https://typia.io",
   "dependencies": {
     "@samchon/openapi": "^2.4.2",
+    "@standard-schema/spec": "^1.0.0",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "inquirer": "^8.2.5",
