--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "7.6.4",
+  "version": "8.0.0-dev.20250222",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -42,7 +42,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "@samchon/openapi": "^2.4.2",
+    "@samchon/openapi": "^3.0.0-dev.20250222",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "inquirer": "^8.2.5",
@@ -50,7 +50,7 @@
     "randexp": "^0.5.3"
   },
   "peerDependencies": {
-    "@samchon/openapi": ">=2.4.2 <3.0.0",
+    "@samchon/openapi": ">=3.0.0 <4.0.0",
     "typescript": ">=4.8.0 <5.8.0"
   },
   "devDependencies": {
