--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -60,7 +60,7 @@
     "ts-node": "^10.9.1",
     "ts-patch": "^3.3.0",
     "tstl": "^3.0.0",
-    "typescript": "~5.7.3",
+    "typescript": "5.9.0-dev.20250223",
     "uuid": "^8.3.2",
     "zod": "^3.19.1"
   },
