--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -14,8 +14,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Root
-        run: npm install
+        run: pnpm install
       - name: Build
         working-directory: website
         run: |
