--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "suppress-warnings": "^1.0.2",
     "tinyglobby": "^0.2.12",
     "ts-node": "^10.9.2",
-    "typescript": "5.9.0-dev.20250223"
+    "typescript": "^5.8.2"
   },
   "stackblitz": {
     "startCommand": "npm install && npm run test"
