chore: build with rslib

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "test": "ts-node deploy --tag test",
     "test:template": "npm run --tag test --template",
     "-------------------------------------------------": "",
-    "build": "rimraf lib && tsc && rollup -c",
-    "dev": "rimraf lib && tsc --watch",
+    "build": "rslib build",
+    "dev": "rslib build --watch",
     "dev:errors": "tsc --project tsconfig.errors.json --watch",
     "eslint": "eslint",
     "eslint:fix": "eslint --fix",
@@ -54,9 +54,7 @@
     "typescript": ">=4.8.0 <5.9.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@rslib/core": "^0.5.4",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/inquirer": "^8.2.5",
     "@types/node": "^18.15.12",
@@ -67,9 +65,6 @@
     "eslint-plugin-deprecation": "^3.0.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
-    "rollup": "^4.18.0",
-    "rollup-plugin-auto-external": "^2.0.0",
-    "rollup-plugin-node-externals": "^8.0.0",
     "suppress-warnings": "^1.0.2",
     "tinyglobby": "^0.2.12",
     "ts-node": "^10.9.2",
