--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "typescript": ">=4.8.0 <5.9.0"
   },
   "devDependencies": {
+    "@rsbuild/core": "^1.2.19",
     "@rslib/core": "^0.5.4",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/inquirer": "^8.2.5",
