--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "typia",
-  "version": "8.0.3",
+  "version": "8.0.4",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -28,8 +28,7 @@
     "------------------------------------------------": "",
     "package:latest": "ts-node deploy --tag latest",
     "package:next": "ts-node deploy --tag next",
-    "package:patch": "ts-node deploy --tag patch",
-    "preinstall": "npx only-allow pnpm"
+    "package:patch": "ts-node deploy --tag patch"
   },
   "repository": {
     "type": "git",
@@ -123,3 +122,4 @@
     "llama"
   ]
 }
+
