--- a/website/package.json
+++ b/website/package.json
@@ -25,7 +25,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.12.0",
-    "@rollup/browser": "^4.13.0",
+    "@rollup/browser": "4.13.0",
     "@samchon/openapi": "latest",
     "lz-string": "^1.5.0",
     "monaco-editor": "^0.50.0",
