--- a/website/package.json
+++ b/website/package.json
@@ -30,6 +30,7 @@
     "lz-string": "^1.5.0",
     "monaco-editor": "^0.50.0",
     "next": "^15.1.0",
+    "next-mdx-remote": "^5.0.0",
     "nextra": "^3.2.5",
     "nextra-theme-docs": "^3.2.5",
     "path": "^0.12.7",
