--- a/typos.toml
+++ b/typos.toml
@@ -11,4 +11,7 @@ Nam = "Nam"
 typia = "typia"
 
 [files]
-extend-exclude = ["test/schemas"]
+extend-exclude = [
+  "test/schemas", 
+  "examples/bin",
+]
