--- a/website/package.json
+++ b/website/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "typia.io",
+  "private": true,
+  "name": "@typia/website",
   "version": "0.1.0",
   "description": "Typia Guide Documents",
-  "private": true,
   "scripts": {
-    "build": "rimraf .next && rimraf out && npm run build:playground && npm run build:typedoc && next build && node build/sitemap",
-    "build:playground": "node build/raw && rspack && npm run build:typedoc",
+    "build": "rimraf .next && rimraf out && npm run build:compiler && npm run build:typedoc && next build && npm run build:sitemap",
+    "build:compiler": "node build/compiler",
     "build:typedoc": "node build/typedoc",
+    "build:sitemap": "node build/sitemap",
     "deploy": "node build/deploy",
     "dev": "next dev"
   },
@@ -26,7 +27,7 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.12.0",
     "@rollup/browser": "4.13.0",
-    "@samchon/openapi": "latest",
+    "embed-typescript": "^1.1.0",
     "lz-string": "^1.5.0",
     "monaco-editor": "^0.50.0",
     "next": "^15.1.0",
@@ -39,7 +40,6 @@
     "react-dom": "^18.2.0",
     "tgrid": "^1.0.3",
     "tstl": "^3.0.0",
-    "typescript": "~5.8.3",
     "typia": "../typia.tgz"
   },
   "devDependencies": {
@@ -56,6 +56,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "typedoc": "^0.27.0",
+    "typescript": "~5.8.3",
     "write-file-webpack-plugin": "^4.5.1"
   }
 }
