Try cache cleaning way

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Build
         working-directory: website
         run: |
+          npm cache clean --force
           npm install
           npm run build
       - name: Deploy
