Remake typia playground compiler (#1598)
* Remake typia playground compiler

* Fix AI suggested

* Run website workflow in PR

* Also examples

* Try to run workflow again

* Try cache cleaning way

* Try new way, remove `package.lock.json` files

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -5,6 +5,13 @@ on:
       - master
     paths:
       - .github/workflows/website.yml
+      - 'examples/**'
+      - 'website/**'
+      - 'website/package.json'
+  pull_request:
+    paths:
+      - .github/workflows/website.yml
+      - 'examples/**'
       - 'website/**'
       - 'website/package.json'
 jobs:
@@ -28,7 +35,8 @@ jobs:
           npm install
           npm run build
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.3
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
           folder: ./website/out
