Upgrade nextra docs

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -19,11 +19,17 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "downlevelIteration": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "include": [
-    "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
