Upgrade nextra docs (#1599)
* Upgrade nextra docs

* Remove raw/external.json

* ignore website/src/raw

* Fix builder problem

* Add pagefind script

* tracae rspack error message

* Fix rspack tsconfig

--- a/website/.gitignore
+++ b/website/.gitignore
@@ -1,10 +1,10 @@
-.next
+.next/
+_pagefind/
 node_modules/
 out/
-raw/
-
 public/api/
 public/compiler/
 public/robots.txt
 public/sitemap*.xml
+src/raw/
 typedoc-json/
