--- a/website/package.json
+++ b/website/package.json
@@ -4,9 +4,12 @@
   "version": "0.1.0",
   "description": "Typia Guide Documents",
   "scripts": {
-    "build": "rimraf .next && rimraf out && npm run build:compiler && npm run build:typedoc && next build && npm run build:sitemap",
+    "build": "npm run prebuild && next build && npm run postbuild",
+    "prebuild": "rimraf .next && rimraf out && npm run build:compiler && npm run build:typedoc",
+    "postbuild": "npm run build:pagefind && npm run build:sitemap",
     "build:compiler": "node build/compiler",
     "build:typedoc": "node build/typedoc",
+    "build:pagefind": "pagefind --site .next/server/app --output-path out/_pagefind",
     "build:sitemap": "node build/sitemap",
     "deploy": "node build/deploy",
     "dev": "next dev"
@@ -30,10 +33,9 @@
     "embed-typescript": "^1.1.0",
     "lz-string": "^1.5.0",
     "monaco-editor": "^0.50.0",
-    "next": "^15.1.0",
-    "next-mdx-remote": "^5.0.0",
-    "nextra": "^3.2.5",
-    "nextra-theme-docs": "^3.2.5",
+    "next": "^15.3.4",
+    "nextra": "^4.2.17",
+    "nextra-theme-docs": "^4.2.17",
     "path": "^0.12.7",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
@@ -51,6 +53,7 @@
     "@types/react": "^18.0.35",
     "gh-pages": "^5.0.0",
     "next-sitemap": "^4.2.3",
+    "pagefind": "^1.3.0",
     "process": "^0.11.10",
     "rimraf": "^5.0.0",
     "ts-loader": "^9.5.1",
