--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,7 @@
 packages:
+  - 'benchmark'
   - 'packages/*'
   - 'test'
   - 'test-error'
   - 'test-esm'
-  - 'benchmark'
-  - 'examples'
+  - 'website/examples'
