Support `@autobe/interface` in playground for demonstration

--- a/website/compiler-dependencies/package.json
+++ b/website/compiler-dependencies/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://typia.io",
   "devDependencies": {
-    "typia": "../../typia.tgz"
+    "typia": "../../typia.tgz",
+    "@autobe/interface": "^0.24.1"
   }
 }
