--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "private": true,
   "name": "typia",
-  "version": "10.0.0-dev.20251107-2",
+  "version": "10.0.0-dev.20251107-4",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -42,7 +41,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "@samchon/openapi": "^5.0.0-dev.20251107",
+    "@samchon/openapi": "^5.0.0",
     "@standard-schema/spec": "^1.0.0",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
