--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
         run: pnpm install
       - name: Publish to npm
         run: pnpm run package:latest
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_PUBLISH }}
       - name: Root
         run: pnpm run package:tgz
       - name: Website Setup
