--- a/website/compiler-dependencies/package.json
+++ b/website/compiler-dependencies/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://typia.io",
   "devDependencies": {
     "typia": "../../typia.tgz",
-    "@autobe/interface": "^0.24.1"
+    "@autobe/interface": "latest",
+    "@samchon/openapi": "latest"
   }
 }
