--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -64,7 +64,7 @@
     "eslint-plugin-deprecation": "^3.0.0",
     "prettier": "^3.2.5",
     "prettier-plugin-jsdoc": "^1.3.3",
-    "rimraf": "^5.0.5",
+    "rimraf": "catalog:utils",
     "rollup": "^4.18.0",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-node-externals": "^8.0.0",
