--- a/packages/openapi/package.json
+++ b/packages/openapi/package.json
@@ -39,15 +39,12 @@
   "homepage": "https://samchon.github.io/openapi/api",
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.11.4",
-    "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^12.1.2",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@rollup/plugin-terser": "catalog:rollup",
+    "@rollup/plugin-typescript": "catalog:rollup",
     "@types/node": "catalog:utils",
-    "prettier": "^3.5.3",
-    "prettier-plugin-jsdoc": "^1.3.2",
     "rimraf": "catalog:utils",
-    "rollup": "^4.18.1",
-    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup": "catalog:rollup",
+    "rollup-plugin-auto-external": "catalog:rollup",
     "tinyglobby": "^0.2.10",
     "ts-node": "catalog:typescript",
     "ts-patch": "catalog:typescript",
