--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -51,10 +51,9 @@
     "typescript": ">=4.8.0 <5.10.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.6",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@rollup/plugin-commonjs": "catalog:rollup",
+    "@rollup/plugin-node-resolve": "catalog:rollup",
+    "@rollup/plugin-typescript": "catalog:rollup",
     "@types/inquirer": "^8.2.5",
     "@types/node": "^18.15.12",
     "@types/ts-expose-internals": "npm:ts-expose-internals@5.6.3",
@@ -62,12 +61,10 @@
     "@typescript-eslint/parser": "^8.1.0",
     "chalk": "^4.0.0",
     "eslint-plugin-deprecation": "^3.0.0",
-    "prettier": "^3.2.5",
-    "prettier-plugin-jsdoc": "^1.3.3",
     "rimraf": "catalog:utils",
-    "rollup": "^4.18.0",
-    "rollup-plugin-auto-external": "^2.0.0",
-    "rollup-plugin-node-externals": "^8.0.0",
+    "rollup": "catalog:rollup",
+    "rollup-plugin-auto-external": "catalog:rollup",
+    "rollup-plugin-node-externals": "catalog:rollup",
     "suppress-warnings": "^1.0.2",
     "tinyglobby": "^0.2.12",
     "ts-node": "catalog:typescript",
