--- a/packages/interface/package.json
+++ b/packages/interface/package.json
@@ -3,6 +3,13 @@
   "version": "11.0.1",
   "description": "Superfast runtime validators with only one line",
   "main": "src/index.ts",
+  "exports": {
+    ".": {
+      "types": "./lib/index.d.ts",
+      "default": "./lib/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "scripts": {
     "build": "rimraf lib && tsc",
     "dev": "rimraf lib && tsc --watch"
