--- a/packages/typia/package.json
+++ b/packages/typia/package.json
@@ -3,6 +3,15 @@
   "version": "11.0.1",
   "description": "Superfast runtime validators with only one line",
   "main": "src/index.ts",
+  "exports": {
+    ".": {
+      "types": "./lib/index.d.ts",
+      "import": "./lib/index.mjs",
+      "require": "./lib/index.js",
+      "default": "./lib/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "bin": {
     "typia": "./lib/executable/typia.js"
   },
@@ -39,8 +48,8 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "@samchon/openapi": "workspace:^",
     "@standard-schema/spec": "^1.0.0",
+    "@typia/interface": "workspace:^",
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "inquirer": "^8.2.5",
